fix social block clipping and appearing when useless

--- a/static/new/css/style.css
+++ b/static/new/css/style.css
@@ -709,3 +709,7 @@ tito-widget .tito-wrapper {
 tito-widget .tito-ticket-description {
   color: #808080;
 }
+
+.speaker .image-holder {
+  display: inline-block;
+}
